# agent-gateway

./: .gitignore  README.md  findings.md  progress.md  pyproject.toml  task_plan.md
docs/superpowers/plans/: 2026-05-12-agent-gateway-phase1-implementation.md
docs/superpowers/specs/: 2026-05-12-agent-gateway-design.md
src/agent_gateway/: app.py  cli.py  config.py
src/agent_gateway/canonical/: events.py  models.py  projection.py
src/agent_gateway/host_control/: interfaces.py  models.py
src/agent_gateway/providers/: base.py  registry.py
src/agent_gateway/providers/deepseek/: adapter.py  client.py
src/agent_gateway/runtime/: engine.py  reasoning_store.py  rectifier.py
tests/: test_smoke.py
tests/canonical/: test_projection.py
tests/host_control/: test_models.py
tests/ingress/: test_responses_api.py
tests/providers/deepseek/: test_adapter.py
tests/runtime/: test_engine.py  test_rectifier.py
